--- a/rebar.config
+++ b/rebar.config
@@ -12,8 +12,7 @@
 		  {full , [{basic}, netlink, {amqp}, {collectd}]}]}.
 {deps,
  [
-  {exometer_core, ".*", {git, "https://github.com/Feuerlabs/exometer_core.git",
-			 {tag, "1.2"}}},
+  {exometer_core, ".*", {git, "https://github.com/SCDependencies/exometer_core.git", {branch, "SCD-1.2"}}},
   {exometer_collectd, ".*", {git, "https://github.com/Feuerlabs/exometer_collectd.git",
 			     {tag, "1.0.1"}}},
   {netlink, ".*", {git, "https://github.com/Feuerlabs/netlink.git", {tag,"1.0"}}},
